AudioParam's minValue / maxValue are ignored https://bugs.webkit.org/show_bug.cgi?id=215905

Reviewed by Darin Adler.

Source/WebCore:

Clamp the AudioParam's values so that they are always in the
[minValue, maxValue] range.

Test: webaudio/audioparam-nominal-range.html

* Modules/webaudio/AudioParam.cpp:
(WebCore::AudioParam::value):
(WebCore::AudioParam::setValue):
(WebCore::AudioParam::smooth):
(WebCore::AudioParam::calculateFinalValues):
(WebCore::AudioParam::calculateTimelineValues):
* Modules/webaudio/AudioParamTimeline.cpp:
(WebCore::AudioParamTimeline::valueForContextTime):
(WebCore::AudioParamTimeline::valuesForTimeRange):
* Modules/webaudio/AudioParamTimeline.h:
* Modules/webaudio/BiquadProcessor.cpp:
(WebCore::BiquadProcessor::BiquadProcessor):

LayoutTests:

Import layout test coverage from Blink.

* webaudio/audioparam-nominal-range-expected.txt: Added.
* webaudio/audioparam-nominal-range.html: Added.


Canonical link: https://commits.webkit.org/228720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266270 268f45cc-cd09-0410-ab3c-d52691b4dbfc